roles/ingress-istio/templates/ingress-istio.yml
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: istio
spec:
  controller: istio.io/ingress-controller
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vqcomm-helloworld
  name: vqcomm-istio-np
  namespace: default
spec:
  type: NodePort
  selector:
    app: vqcomm-helloworld
  ports:
    - name: http
      protocol: TCP
      nodePort: 30200
      port: 80
      targetPort: 80
---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: istio-to-helloworld-ingress
  namespace: default
spec:
  ingressClassName: istio
  selector:
    app: vqcomm-helloworld
  rules:
  - host: nginx-to-istio.doubleingress.dev
    http:
      paths:
      - backend:
          service:
            name: vqcomm-helloworld
            port:
              name: http
        path: /
        pathType: Prefix
  - host: istio-to-helloworld.doubleingress.dev
    http:
      paths:
      - backend:
          service:
            name: vqcomm-helloworld
            port:
              name: http
        path: /
        pathType: Prefix
